# src/router/QueryRouter.js
@@ -5,6 +5,6 @@ const Controller = require("../controller/Controller");
 router.get("/query", Controller.queryDepositQueue);
 router.put("/update", Controller.updateRootDeposit);
 router.get("/proof/:key", Controller.genereateUserProof);
-router.get("/infor/:address", Controller.queryDepositInforByUserAddress);
+router.get("/infor", Controller.queryDepositInforByUserAddress);
 router.delete("/db", Controller.deleteDb);
 module.exports = router;
